--- a/index.html
+++ b/index.html
@@ -3,16 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEMPLATE</title>
+    <title>Quote Generator</title>
     <!-- <link rel="icon" type="image/png" href="www.google.com/s2/favicons?domain=vincentdelaleu.ch"> -->
     <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- <h1><!-\- <i class="fab fa-500px"></i>  -\-> HELLO, EARTH!</h1> -->
-
+    <div class="quote-container" id="quote-container">
+        <!-- Quote  -->
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote">“You never change things by fighting the existing reality. To change something, build a new model that makes the existing model obsolete.”</span>
+        </div>
+        <!-- Author  -->
+        <div class="quote-author">
+            <span id="author">
+                Buckminster Fuller
+            </span>
+        </div>
+        <!-- Button  -->
+        <div class="button-container">
+            <button id="twitter" class="twitter-button" title="Tweet this quote!">
+                <i class="fab fa-twitter"></i>
+            </button>
+            <button id="new-quote"title="Get a new quote!">New Quote</button>
+        </div>
+    </div>
+    <!-- LOADER -->
+<div class="loader" id="loader"></div>
     <!-- SCRIPT -->
     <script src="script.js"></script>
 </body>
