added local quotes option

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <!-- Quote  -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">“You never change things by fighting the existing reality. To change something, build a new model that makes the existing model obsolete.”</span>
+            <span id="quote">
+                <!-- You never change things by fighting the existing reality. To change something, build a new model that makes the existing model obsolete. -->
+            </span>
         </div>
         <!-- Author  -->
         <div class="quote-author">
             <span id="author">
-                Buckminster Fuller
+                <!-- Buckminster Fuller -->
             </span>
         </div>
         <!-- Button  -->
@@ -36,6 +38,7 @@
     <!-- LOADER -->
 <div class="loader" id="loader"></div>
     <!-- SCRIPT -->
+    <script src="quotes.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
